# Audio-Visualizer

./: .gitignore  AUTHORS.md  ArgMapper.cpp  ArgMapper.h  Makefile  Makefile.in  Makefile.orig  README.md  TODO.rst  Visualizer  Visualizer.cpp  Visualizer.h  audio_helper.cpp  audio_helper.h  audio_main  audio_main.cpp  config.h  config.h.in  configure  configure.in  design.txt  graphics_helper.cpp  graphics_helper.h  remarks.rst  run
GLTools/include/: GLTools.h.gch  math3d.h
GLTools/src/: GLShaderManager.cpp  GLTools.cpp  math3d.cpp
audio_main.dSYM/Contents/: Info.plist
documentation/: design.txt  index.html  mfbasic.css  remarks_DavidCoss.txt  remarks_emmett.rst
m4/: check_framework.m4
scripts/: run  thedrop
