AC_PREREQ([2.68])
AC_INIT([audio-vis], [0.2], [emmett.butler321@gmail.com])

dnl Most of these things are boiler plate (from autoscan);
dnl but here's some of my stuff
dnl BEGIN EMMETT's BLOCK OF STUFF

m4_include([m4/check_framework.m4])
MY_CHECK_FRAMEWORK(OpenGL)
MY_CHECK_FRAMEWORK(GLUT)
MY_CHECK_FRAMEWORK(Carbon)

dnl END EMMETT's BLOCK OF STUFF

AC_CONFIG_SRCDIR([audio_helper.cpp])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

AC_LANG(C++)

# Checks for libraries.
AC_CHECK_LIB([GL], [main])
AC_CHECK_LIB([asound], [main])
AC_CHECK_LIB([glut], [main])
AC_CHECK_LIB([jack], [main])
AC_CHECK_LIB([rt], [main])
AC_CHECK_LIB([sndfile], [main])
AC_CHECK_LIB([portaudio], [main])
AC_CHECK_LIB([X11], [main])
AC_CHECK_LIB([GLU], [main])

lpa=`locate -e --regex libportaudio.a$`
AC_CHECK_FILE($lpa, [AC_SUBST(LIBPORTAUDIOA, $lpa)], [echo "libportaudio.a not found!!"])

#cp confdefs.h my_conf.h

# Checks for header files.
AC_PATH_X
AC_CHECK_HEADERS([inttypes.h stddef.h stdint.h stdlib.h string.h sys/time.h unistd.h iostream stdio.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_INLINE
AC_TYPE_INT32_T
AC_TYPE_INT64_T
AC_TYPE_UINT64_T
AC_CHECK_TYPES([ptrdiff_t])

# Checks for library functions.
AC_HEADER_MAJOR
AC_FUNC_MALLOC
AC_CHECK_FUNCS([gettimeofday sqrt strcasecmp strchr strstr])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
